  "interwiki" section of the output.
* Added categorymembers list to query for pages in a category.
* (bug 10260) Show page protection status
* (bug 10392) Include MediaWiki version details in version output
* (bug 10411) Site language in meta=siteinfo
* (bug 10391) action=help doesn't return help if format is fancy markup

== Maintenance script changes since 1.10 ==

* Add support for wgMaxTocLevel option in parserTests
* (bug 6823) Disable article view counter in maintenance/dumpHTML.php
* Fix maintenance/importImages.php so it doesn't barf PHP errors when no
  suitable files are found, and make the list of extensions an option (defaults
  to $wgFileExtensions)

== Languages updated since 1.10 ==

* Arabic (ar)
* Bulgarian (bg)
* Catalan (ca)
* Danish (da)
* German (de)
* Greek (el)
* Spanish (es)
* Farsi (fa)
* Finnish (fi)
* Võro (fiu-vro)
* French (fr)
* Galician (gl)
* Hakka (hak)
* Hebrew (he)
* Indonesian (id)
* Italian (it)
* Japanese (ja)
* Georgian (ka)
* Kabyle (kab)
* Kazakh (kk)
* Kurdish (ku)
* Lithuanian (lt)
* Malayalam (ml)
* Burmese (my)
* Norwegian (no)
* Polish (pl)
* Portuguese (pt)
* Romanian (ro)
* Russian (ru)
* Slovak (sk)
* Slovenian (sl)
* Shona (sn)
* Somali (so)
* Albanian (sq)
* Sundanese (su)
* Swedish (sv)
* Tigrinya (ti)
* Volapük (vo)
* Old Chinese / Late Middle Chinese (zh-classical)
* Chinese (PRC) (zh-cn)
* Chinese (Taiwan) (zh-tw)
* Cantonese (zh-yue)

== Compatibility ==

MediaWiki 1.11 requires PHP 5 (5.1 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.11 has several database changes since 1.10, and will not work without schema
updates.
